# python-zabbix-module-ceph

./: .gitignore  setup.cfg
etc/logrotate.d/: python-zabbix-module-ceph
etc/python-zabbix-modules/available.d/: ceph.conf
templates/: zabbix_module_ceph.xml
zabbix_module_ceph/: __init__.py
