[metadata]
name = python-zabbix-module-ceph
summary = Ceph monitoring module for Zabbix
author = Ivan Mironov
author-email = mironov.ivan@gmail.com
home-page = http://ivan-mironov.net/

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    zabbix_module_ceph

[entry_points]
zabbix_modules =
    ceph = zabbix_module_ceph:Main
